--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html>
 <head>
   <title>css</title>
+  <meta charset="utf-8"/>
 </head>
 <body>
-
+  <h1>背景色の変更</h1>
+  <h2>太文字に</h2>
+  <h3>枠がつく</h3>
+  <h4>先頭の文字だけ大きい</h4>
 </body>
 </html>
