--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>css</title>
   <meta charset="utf-8"/>
+  <style>@import url("css/default.css");</style>
 </head>
 <body>
   <h1>背景色の変更</h1>
