--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>背景色の変更</h1>
-  <h2>太文字に</h2>
+  <h2 class="greeting">太文字に</h2>
   <h3>枠がつく</h3>
   <h4><span>先</span>頭の文字だけ大きい</h4>
 </body>
