--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   
   <h1>背景色の変更</h1>
-  <h2 class="weight">太文字に</h2>
+  <p class="weight">太文字に</p>
   <h3 id=waku>枠がつく</h3>
   <h4><span>先</span>頭の文字だけ大きい</h4>
 </body>
