--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
   
-  <h1>背景色の変更</h1>
-  <p class="weight">太文字に</p>
-  <h3 id=waku>枠がつく</h3>
-  <h4><span>先</span>頭の文字だけ大きい</h4>
+  <p1>背景色の変更</p1>
+  <p2 class="weight">太文字に</p2>
+  <p3 id=waku>枠がつく</p3>
+  <p4><span>先</span>頭の文字だけ大きい</p4>
 </body>
 </html>
